
FILE(GLOB AVX2_SRCS "*.cc")

IF (MSVC)
	SET(ARCH_COMPILE_FLAG /arch:avx2)
ELSE()
	SET(ARCH_COMPILE_FLAG -fPIC -msse2 -maes -mavx2 -msha -mno-vaes -O2)
ENDIF()

#CMAKE_POLICY(SET CMP0079 NEW)

ADD_COMPILE_OPTIONS(${ARCH_COMPILE_FLAG})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib/include)

ADD_LIBRARY(arch_avx2
	STATIC
	${AVX2_SRCS})


TARGET_LINK_LIBRARIES(alcp PRIVATE arch_avx2)

