
FILE(GLOB ZEN3_SRCS "*.cc")

IF (MSVC)
	SET(ARCH_COMPILE_FLAG /arch:znver3)
ELSE()
	SET(ARCH_COMPILE_FLAG -fPIC -znver3)
ENDIF()
	
#CMAKE_POLICY(SET CMP0079 NEW)

ADD_COMPILE_OPTIONS(${ARCH_COMPILE_FLAG})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib/include)

ADD_LIBRARY(arch_zen3
	STATIC	
	${ZEN3_SRCS})


TARGET_LINK_LIBRARIES(alcp PRIVATE arch_zen3)

